# EngineGame3D

./: CMakeLists.txt  CMakePresets.json  Engine3D.cpp  Engine3D.h  README.md  build.cmd  build1.cmd
.cache/clangd/index/: AmbientLight.cpp.5E53DCE7FAF39D72.idx  AmbientLight.h.1E60A1C29D1A75DE.idx  Block.cpp.B18F4C47F373BB8A.idx  Block.h.29FF60BCE866A68F.idx  Buffer.cpp.CE7A21606957EB5E.idx  Buffer.h.A52B01D93DBD6DAB.idx  Camera.cpp.5F6B7703CFA18F69.idx  Camera.h.FE184E4FB2CBB2BB.idx  Cube.h.5A6BEF20027BEDBE.idx  Culling.cpp.A1AFD56095A852FA.idx  Culling.h.AB5A2778745B280D.idx  DebugLogger.cpp.091959F4D9B68C92.idx  DebugLogger.h.A683BC2806DE66EC.idx  DistantLight.cpp.02B63507878EB16D.idx  DistantLight.h.48104CCB25FB1B31.idx  Engine3D.cpp.03B175289D2C05D7.idx  FragmentShader.cpp.A6C432927E03CAEC.idx  FragmentShader.h.01B5C6A8435891A8.idx  FrameBuffer.cpp.7828185A5A768533.idx  FrameBuffer.h.383E60AD905FB114.idx  Game.cpp.44D5DBA2502B84CD.idx  Game.h.705ED1F8F3BED3FB.idx  GameRender.cpp.07B7CFF87FC73842.idx  GameRender.h.F878E61A0F6B7210.idx  Light.h.A91E8F05CAC689CC.idx  Math.cpp.CC45C66EB4BD0EB6.idx  Math.h.757E468F4356BB67.idx  Mesh.cpp.952D396E5BA51C34.idx  Mesh.h.D9A77C76345D14C1.idx  Model.cpp.62BB61561B44505B.idx  Model.h.44920E65FD6B3B56.idx  PSLogger.cpp.554666CF008EC54A.idx  Pipeline.cpp.F0302D87BD815FDF.idx  Pipeline.h.7854CE51BCCE059C.idx  Player.cpp.802C457DBBD468AB.idx  Player.h.6413779CD3B36299.idx  Rasterization.cpp.7221E5EEFAAADC41.idx  Rasterization.h.16028C7137B9BBF4.idx  Render.cpp.F7AB8132C70680CA.idx  Render.h.044ECFA33070A013.idx  (+9 more)
Core/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  VoxelGrid.cpp  VoxelGrid.h
Core/Light/: AmbientLight.cpp  AmbientLight.h  DistantLight.cpp  DistantLight.h  Light.h
Debugger/: DebugLogger.cpp  DebugLogger.h
Game/Enities/: Player.cpp  Player.h
Game/Entities/: Player.cpp  Player.h
Game/Game/: Game.cpp  Game.h
Game/GameRender/: GameRender.cpp  GameRender.h
Game/Soure/: worldMap.txt
Game/World/: Block.h  Cube.h  World.cpp  World.h
Geometry/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Vertex.h
Math/: Math.cpp  Math.h
Pipeline/: Culling.cpp  Culling.h  FragmentShader.cpp  FragmentShader.h  Pipeline.cpp  Pipeline.h  Rasterization.cpp  Rasterization.h
Render/: FrameBuffer.cpp  FrameBuffer.h  Render.cpp  Render.h
Scene/: Scene.cpp  Scene.h
Utilities/: InputManager.hpp  UtilitiesManager.h
tools/PSLogger/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  PSLogger.cpp  PSLogger.sln  PSLogger.vcxproj  PSLogger.vcxproj.filters  cmake_install.cmake
